src/main/openshift/swim-dnotam-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swim-dnotam-provider
  namespace: swim-demo
  labels:
    app: swim-dnotam-provider
    app.kubernetes.io/part-of: swim-dnotam
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: swim-dnotam-provider
